refactor(merge,split,json): adopt streaming approach and standardize types, address gradle warnings